--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ImageBucket": "rhino.webadvert.web",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,5 +13,12 @@
     "UserPoolClientId": "5i1b4o7f0u8m4pq63gdshnq7m6",
     "UserPoolClientSecret": "kemtv4sa1l29cvdnp62mkj2ajade3hv4d0vmciqunj16usvno49",
     "UserPoolId": "us-east-2_MCUJsCNtn"
-  }
+  },
+  "AdvertApi": {
+    "BaseUrl": "http://3.131.1.180/api/v1/Adverts"
+  },
+  "SearchApi": {
+    "url": "http://localhost:5000"
+  },
+  "ImageBaseUrl": "http://d2c10uo0ugdspd.cloudfront.net"
 }
