--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AdvertApi": {
+    "BaseUrl": "https://localhost:7001/api/v1/Adverts"
   }
 }
