--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,14 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:4000"
+      },
+      "Https": {
+        "Url": "https://localhost:4001"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +17,6 @@
     }
   },
   "AdvertApi": {
-    "BaseUrl": "https://localhost:7001/api/v1/Adverts"
+    "BaseUrl": "http://localhost:7000/Adverts/v1"
   }
 }
