--- a/appsettings.json
+++ b/appsettings.json
@@ -15,10 +15,10 @@
     "UserPoolId": "us-east-2_MCUJsCNtn"
   },
   "AdvertApi": {
-    "BaseUrl": "http://3.131.1.180/api/v1/Adverts"
+    "BaseUrl": "http://18.118.94.51/Adverts/v1"
   },
   "SearchApi": {
-    "url": "http://localhost:5000"
+    "url": "https://3.21.70.87"
   },
-  "ImageBaseUrl": "http://d2c10uo0ugdspd.cloudfront.net"
+  "ImageBaseUrl": "https://d5zm2qcy2hkni.cloudfront.net"
 }
